--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -13,14 +13,16 @@ block content
     .main
         .header-first.js-header-first
             .header-first__title.js-header-first-title Покупка сертификата
-            .header-first__text.js-header-first-text Вишня, м. Новокузнецкая
+            .header-first__text.js-header-first-text Сеть студий наращивания ANNA KEY
         .header-second.js-header-second
-            .header-second__title.js-header-title Выберите сертификат
+            .header-second__title.js-header-title Выберите филиал
 
         .steps
             .cards(js-cards)
-                +card({name: 'Название сертификата длинным названием', price: '2 000', hit: 'хит', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться', className: 'interactive'})
-                +card({name: 'Название сертификата ', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться', className: 'interactive'})
-                +card({name: 'Название сертификата ', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться', className: 'interactive'})
-                +card({name: 'Название сертификата ', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться', className: 'interactive'})
-                +card({name: 'Название сертификата ', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться', className: 'interactive'})
+                +card({name: 'Студия Anna Key Авиамоторная', status: '2-й Кабельный проезд, д. 1, 3 этаж', className: 'filial interactive'})
+                +card({name: 'Студия Anna Key Братиславская', status: 'Ул. Братиславская, д. 6, 1 подъезд, 8 этаж', className: 'filial interactive'})
+                +card({name: 'Студия Anna Key Динамо', status: 'Ленинградский проспект, дом 33, корпус 5', className: 'filial interactive'})
+                +card({name: 'Студия Anna Key Китай-Город', status: 'Малый Златоустинский переулок д.6. стр 1', className: 'filial interactive'})
+                +card({name: 'Студия Anna Key Менделеевская/Достоевская', status: '3-й Самотечный переулок, дом 13', className: 'filial interactive'})
+                +card({name: 'Студия Anna Key Профсоюзная', status: 'Нахимовский проспект д 38', className: 'filial interactive'})
+                +card({name: 'Студия Anna Key Тропарево', status: 'Ленинский проспект, д. 123Ленинский проспект, д. 123', className: 'filial interactive'})
