--- a/src/pug/pages/step-three-payed.pug
+++ b/src/pug/pages/step-three-payed.pug
@@ -17,7 +17,7 @@ block content
 
         .steps.steps_columns
             .cards.cards_single
-                +card({name: 'Название сертификата длинным названием', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться'})
+                +card({name: 'Название сертификата длинным названием', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться', className: 'certificate'})
 
             .step
                 .step__title.step__title_hide-tablet Спасибо за покупку
