--- a/src/scss/pages/header.scss
+++ b/src/scss/pages/header.scss
@@ -37,6 +37,12 @@
         line-height: 20px;
         color: vars.$textLBGSecondary;
 
+        &.link {
+            text-decoration: none;
+            color: vars.$accent600;
+            cursor: pointer;
+        }
+
         @media (min-width: 724px) {
             font-size: 16px;
             line-height: 24px;
