feat: add card colors

--- a/src/pug/pages/error.pug
+++ b/src/pug/pages/error.pug
@@ -12,7 +12,7 @@ block content
 
         .steps.steps_columns
             .cards.cards_single
-                +card({name: 'Название сертификата', price: '2 000', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться', className: 'certificate'})
+                +card({name: 'Название сертификата', price: '2 000', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться', className: 'default-color'})
 
             .step
                 .step__title.error Ошибка оплаты
