--- a/src/pug/pages/step-four.pug
+++ b/src/pug/pages/step-four.pug
@@ -18,7 +18,7 @@ block content
 
         .steps.steps_columns
             .cards.cards_single.cards__step-four
-                +card({name: 'Название сертификата длинным названием', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', hasBg:'true', hasImg: 'true', hasBtns: 'true'})
+                +card({name: 'Название сертификата длинным названием', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', hasBg:'true', hasImg: 'true', hasBtns: 'true', className: 'default-color'})
 
                 .bg-tabs.js-bg-tabs
                     button.bg-tabs__button.default.js-bg-tab-button(type='button')
