--- a/src/pug/pages/step-one.pug
+++ b/src/pug/pages/step-one.pug
@@ -18,9 +18,9 @@ block content
 
         .steps
             .cards(js-cards)
-                +card({name: 'Название сертификата длинным названием', price: '2 000', hit: 'хит', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться', className: 'certificate interactive'})
-                +card({name: 'Название сертификата ', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться', className: 'certificate interactive'})
-                +card({name: 'Название сертификата ', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться', className: 'certificate interactive'})
-                +card({name: 'Название сертификата ', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться', className: 'certificate interactive'})
-                +card({name: 'Название сертификата ', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться', className: 'certificate interactive'})
-                +card({name: 'Название сертификата ', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться', className: 'certificate interactive'})
+                +card({name: 'Название сертификата длинным названием', price: '2 000', hit: 'хит', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться', className: 'default-color interactive'})
+                +card({name: 'Название сертификата ', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться', className: 'default-color interactive'})
+                +card({name: 'Название сертификата ', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться', className: 'default-color interactive'})
+                +card({name: 'Название сертификата ', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться', className: 'default-color interactive'})
+                +card({name: 'Название сертификата ', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться', className: 'default-color interactive'})
+                +card({name: 'Название сертификата ', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться', className: 'default-color interactive'})
