--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -12,8 +12,8 @@ $tablet: 'screen and (max-width: 1024px)';
 $phone: 'screen and (max-width: 767px)';
 $smallphone: 'screen and (max-width: 340px)';
 
-$accent32: rgba(1, 144, 219, 0.32);
 $accent12: rgba(1, 144, 219, 0.12);
+$accent32: rgba(1, 144, 219, 0.32);
 $accent48: rgba(1, 144, 219, 0.48);
 $accent500: rgba(1, 144, 219, 1);
 $accent600: rgba(0, 111, 188, 1);
@@ -34,13 +34,24 @@ $backgroundYellow: rgba(244, 240, 225, 1);
 $backgroundYellowHover: rgba(233, 225, 195, 1);
 $backgroundPurple: rgba(238, 228, 241, 1);
 $backgroundPurpleHover: rgba(221, 201, 227, 1);
+$backgroundGrey1: rgba(244, 245, 245, 1);
+$backgroundGrey2: rgba(223, 224, 226, 1);
+$backgroundGrey3: rgba(234, 235, 235, 1);
+$backgroundGrey1Hover: rgba(223, 224, 226, 1);
+$backgroundGrey2Hover: rgba(202, 204, 206, 1);
+$backgroundGrey3Hover: rgba(213, 214, 216, 1);
 $danger500: rgba(255, 59, 56, 1);
 $danger600: rgba(219, 40, 53, 1);
 $darkner4: rgba(0, 0, 0, 0.04);
+$darkner8: rgba(0, 0, 0, 0.08);
+$darkner16: rgba(0, 0, 0, 0.16);
+$darkner40: rgba(0, 0, 0, 0.4);
 $interfaceBackground: rgba(255, 255, 255, 1);
 $interfaceBorder: rgba(0, 0, 0, 0.16);
 $textDBGPrimary: rgba(255, 255, 255, 1);
+$textDBGSecondary: rgba(255, 255, 255, 0.64);
 $textLBGPrimary: rgba(31, 31, 31, 1);
 $textLBGSecondary: rgba(92, 92, 92, 1);
 $textLBGThird: rgba(143, 143, 143, 1);
 $interfaceLBGBorder: rgba(0, 0, 0, 0.16);
+$black: rgba(0, 0, 0, 1);
