--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -19,10 +19,10 @@ block content
 
         .steps
             .cards(js-cards)
-                +card({name: 'Студия Anna Key Авиамоторная', status: '2-й Кабельный проезд, д. 1, 3 этаж', className: 'filial interactive'})
-                +card({name: 'Студия Anna Key Братиславская', status: 'Ул. Братиславская, д. 6, 1 подъезд, 8 этаж', className: 'filial interactive'})
-                +card({name: 'Студия Anna Key Динамо', status: 'Ленинградский проспект, дом 33, корпус 5', className: 'filial interactive'})
-                +card({name: 'Студия Anna Key Китай-Город', status: 'Малый Златоустинский переулок д.6. стр 1', className: 'filial interactive'})
-                +card({name: 'Студия Anna Key Менделеевская/Достоевская', status: '3-й Самотечный переулок, дом 13', className: 'filial interactive'})
-                +card({name: 'Студия Anna Key Профсоюзная', status: 'Нахимовский проспект д 38', className: 'filial interactive'})
-                +card({name: 'Студия Anna Key Тропарево', status: 'Ленинский проспект, д. 123Ленинский проспект, д. 123', className: 'filial interactive'})
+                +card({name: 'Студия Anna Key Авиамоторная', status: '2-й Кабельный проезд, д. 1, 3 этаж', className: 'filial-color interactive'})
+                +card({name: 'Студия Anna Key Братиславская', status: 'Ул. Братиславская, д. 6, 1 подъезд, 8 этаж', className: 'filial-color interactive'})
+                +card({name: 'Студия Anna Key Динамо', status: 'Ленинградский проспект, дом 33, корпус 5', className: 'filial-color interactive'})
+                +card({name: 'Студия Anna Key Китай-Город', status: 'Малый Златоустинский переулок д.6. стр 1', className: 'filial-color interactive'})
+                +card({name: 'Студия Anna Key Менделеевская/Достоевская', status: '3-й Самотечный переулок, дом 13', className: 'filial-color interactive'})
+                +card({name: 'Студия Anna Key Профсоюзная', status: 'Нахимовский проспект д 38', className: 'filial-color interactive'})
+                +card({name: 'Студия Anna Key Тропарево', status: 'Ленинский проспект, д. 123Ленинский проспект, д. 123', className: 'filial-color interactive'})
