--- a/src/pug/pages/step-three.pug
+++ b/src/pug/pages/step-three.pug
@@ -17,7 +17,7 @@ block content
 
         .steps.steps_columns
             .cards.cards_single
-                +card({name: 'Название сертификата длинным названием', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться', className: 'certificate'})
+                +card({name: 'Название сертификата длинным названием', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться', className: 'default-color'})
 
             .step
                 .card-content 
