feat: add datepicker

--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -8,7 +8,9 @@ html
         meta(content="", name="Keywords")
         meta(content="index,follow", name="robots")
         title Покупка сертификата
+        link(rel="stylesheet" href="libs/datepicker.css")
         link(rel="stylesheet" href="css/index.css")
     body
         block content
+    script(src="libs/datepicker.js")
     script(src="js/index.js")
