--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -11,6 +11,7 @@
 @use './components/button.scss';
 @use './components/text-input.scss';
 @use './components/link-button.scss';
+@use './components/datepicker.scss';
 
 * {
     box-sizing: border-box;
