fix: datepicker styles

--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -12,6 +12,7 @@ $tablet: 'screen and (max-width: 1024px)';
 $phone: 'screen and (max-width: 767px)';
 $smallphone: 'screen and (max-width: 340px)';
 
+$accent8: rgba(1, 144, 219, 0.08);
 $accent12: rgba(1, 144, 219, 0.12);
 $accent32: rgba(1, 144, 219, 0.32);
 $accent48: rgba(1, 144, 219, 0.48);
