--- a/src/scss/components/datepicker.scss
+++ b/src/scss/components/datepicker.scss
@@ -24,16 +24,16 @@
     transition: all 0.2s;
 
     &_selected {
-        border-color: rgba(1, 144, 219, 0.48);
-        background-color: rgba(1, 144, 219, 0.08);
+        // border-color: vars.$accent48;
+        // background-color: vars.$accent8;
 
         .datepicker-component__input {
-            color: #006fbc;
+            color: vars.$textLBGPrimary;
         }
     }
 
     &:hover {
-        border-color: rgba(1, 144, 219, 0.48);
+        border-color: vars.$accent48;
     }
 
     &__before {
@@ -118,7 +118,7 @@
                 width: 24px;
                 height: 24px;
                 padding: 0;
-                color: #0190db;
+                color: vars.$textLBGPrimary;
                 font-size: 14px;
                 font-weight: 600;
                 line-height: 20px;
@@ -152,7 +152,7 @@
 
             .dow {
                 height: auto;
-                color: #5c5c5c;
+                color: vars.$textLBGSecondary;
                 font-size: 12px;
                 font-weight: 400;
                 line-height: 16px;
@@ -163,7 +163,7 @@
                 height: 32px;
                 border-radius: 8px;
                 border: 1px solid transparent;
-                color: #1f1f1f;
+                color: vars.$textLBGPrimary;
                 font-size: 14px;
                 line-height: 20px;
 
@@ -176,14 +176,14 @@
 
                 &.today {
                     background-color: transparent;
-                    border-color: rgba(1, 144, 219, 0.48);
-                    color: #006fbc;
+                    border-color: vars.$accent48;
+                    color: vars.$accent600;
                 }
 
                 &.selected {
-                    border-color: #0190db;
-                    background-color: #0190db;
-                    color: #fff;
+                    border-color: vars.$accent500;
+                    background-color: vars.$accent500;
+                    color: vars.$textDBGPrimary;
                     font-weight: 400;
                 }
             }
