--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -330,7 +330,7 @@
             }
 
             &__address {
-                color: vars.$textLBGSecondary;
+                color: vars.$textDBGSecondary;
             }
 
             &__description {
