--- a/src/scss/components/datepicker.scss
+++ b/src/scss/components/datepicker.scss
@@ -59,6 +59,7 @@
         color: #1f1f1f;
         font-size: 14px;
         line-height: 20px;
+        text-align: left;
 
         &:focus {
             outline: none;
