--- a/src/scss/components/datepicker.scss
+++ b/src/scss/components/datepicker.scss
@@ -24,9 +24,6 @@
     transition: all 0.2s;
 
     &_selected {
-        // border-color: vars.$accent48;
-        // background-color: vars.$accent8;
-
         .datepicker-component__input {
             color: vars.$textLBGPrimary;
         }
@@ -61,6 +58,13 @@
         line-height: 20px;
         text-align: left;
 
+        appearance: none;
+        -webkit-appearance: none;
+
+        &::-webkit-calendar-picker-indicator {
+            opacity: 0;
+        }
+
         &:focus {
             outline: none;
             box-shadow: none !important;
@@ -72,7 +76,6 @@
     }
 
     &__icon {
-        display: none;
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
@@ -81,10 +84,6 @@
         height: 24px;
         fill: #5c5c5c;
         pointer-events: none;
-
-        @media (min-width: 724px) {
-            display: block;
-        }
     }
 
     &__reset {
