--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -80,7 +80,7 @@
 
 .step-calendar {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    // grid-template-columns: 1fr 1fr;
     gap: 16px;
 
     &__field {
