--- a/src/pug/pages/step-four-dark.pug
+++ b/src/pug/pages/step-four-dark.pug
@@ -28,8 +28,8 @@ block content
             .step
                 +text-input({label: 'Телефон получателя', type: 'tel', subText: 'Ссылка на сертификат придёт в WhatsApp или SMS', name: 'inputPhone'})
                 .step-calendar
-                    +datepicker({name: "index-sort-from", label: 'День отправления', className: 'index-datepicker'})
-                    +text-input({label: 'Время', name: 'inputTime', className: 'step-calendar__field'})
+                    +datepicker({name: "index-sort-from", label: 'День отправления', className: 'index-datepicker', after: 'Сертификат будет отправлен в 12:00 по МСК'})
+                    //- +text-input({label: 'Время', name: 'inputTime', className: 'step-calendar__field'})
                 +text-input({label: 'Имя получателя', name: 'inputSenderName'})
                 .link-button.js-step-four-add-button
                     button.link-button__button(type="button") Добавить поздравление
